--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,5 +28,12 @@
       android:text="请求"
       />
 
+  <Button
+      android:id="@+id/btn_request_timeout"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="请求"
+      />
+
 
 </LinearLayout>
